--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,13 @@
 <resources>
     <string name="app_name">NooseHanger</string>
     <string name="gæt">Gæt et ord</string>
-    <string name="skriv">Skriv et ord...</string>
+    <string name="skriv">Indtast et bogstav...</string>
     <string name="livTilbage">X X X X X</string>
     <string name="forfraKnap">Start forfra</string>
     <string name="titel">Galgeleg</string>
     <string name="forsøgt">Forsøgte bogstaver: </string>
+    <string name="dutabte">Du tabte, ordet var:</string>
+    <string name="duvandt">Du vandt... denne gang!</string>
+    <string name="gåtilbage">Gå tilbage</string>
+
 </resources>
